--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>全民駕訓班1</title>
+    <title>全民駕訓班</title>
     <link rel="stylesheet" href="./stylesheets/all.css" />
     <link
       rel="stylesheet"
@@ -12,14 +12,20 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://timothy-hippo.github.io/driving/index.html"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="全民汽車駕駛人訓練班" />
     <meta
       property="og:description"
       content="全民駕訓班，原地原車現場考照，一人一台車，增設假日班"
     />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://timothy-hippo.github.io/driving/images/car.jpg"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +52,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html"><strong>場地</strong></a>
+              <a class="nav-link" href="./products.html"
+                ><strong>場地</strong></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html"><strong>登入</strong></a>
@@ -273,14 +281,19 @@
           <div class="col-lg-6 py-lg-5">
             <p class="h3 text-center"><strong>報名注意事項</strong></p>
             <ul class="list-group list-group-flush h4 scheduled">
-              <li class="list-group-item bg-transparent"><i class="fas fa-check-square mr-1"></i>須年滿18歲</li>
+              <li class="list-group-item bg-transparent">
+                <i class="fas fa-check-square mr-1"></i>須年滿18歲
+              </li>
               <li class="list-group-item bg-transparent">
                 <i class="fas fa-check-square mr-1"></i>攜帶身分證正、反影本
               </li>
               <li class="list-group-item bg-transparent">
-                <i class="fas fa-check-square mr-1"></i>攜帶一吋大頭照(近2年內)5張
+                <i class="fas fa-check-square mr-1"></i
+                >攜帶一吋大頭照(近2年內)5張
               </li>
-              <li class="list-group-item bg-transparent"><i class="fas fa-check-square mr-1"></i>繳交訂金1000元</li>
+              <li class="list-group-item bg-transparent">
+                <i class="fas fa-check-square mr-1"></i>繳交訂金1000元
+              </li>
             </ul>
           </div>
           <div
@@ -368,7 +381,7 @@
     </footer>
     <!-- <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
-    
+
     <script src="./javascripts/jQuery/jquery.js"></script>
     <script src="./javascripts/bootstrap/bootstrap.js"></script>
   </body>
