--- a/login.html
+++ b/login.html
@@ -46,7 +46,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products.html"><strong>場地</strong></a>
+              <a class="nav-link" href="./products.html"
+                ><strong>場地</strong></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./login.html"><strong>登入</strong></a>
@@ -63,53 +65,60 @@
     <section class="py-8">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 pr-md-0">
-            <div class="card bg-primary text-white border-0 my-103">
-              <form>
-                <div class="card-body py-6">
-                  <h2 class="card-title text-center"><strong>會員登入</strong></h2>
-                  <p class="card-text">                    
-                    <div class="form-group">
-                      <label for="email">帳號</label>
-                      <input
-                        type="email"
-                        class="form-control"
-                        id="email"
-                        placeholder="請輸入帳號"
-                      />
+          <div class="col-md-6 pr-md-0 my-103">
+            <div class="card bg-primary text-white border-0 h-100">
+              <div class="card-body py-7">
+                <h2 class="card-title text-center mb-5">
+                  <strong>會員登入</strong>
+                </h2>
+                <p class="card-text">  
+                  <div class="input-group mb-4">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text text-primary bg-aid"><i class="fas fa-user"></i></div>
                     </div>
-                    <div class="form-group">
-                      <label for="password">密碼</label>
-                      <input
-                        type="password"
-                        class="form-control"
-                        id="password"
-                        placeholder="請輸入密碼"                        
-                      />
+                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0 " id="email" placeholder="請輸入帳號">
+                  </div>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text text-primary bg-aid"><i class="fas fa-lock"></i></div>
                     </div>
-                  </p>
-                </div>
-                <div class="card-footer p-0">
-                  <button type="submit" class="btn btn-assist text-primary w-100 h-100 py-3">
-                    <span class="h5">登入</span>
-                  </button>
-                </div>
-              </form>
+                    <input type="text" class="form-control text-primary bg-aid shadow-none border-0" id="password" placeholder="請輸入密碼">
+                  </div>
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <button
+                  type="submit"
+                  class="btn btn-assist text-primary w-100 h-100 py-3"
+                >
+                  <span class="h5">登入</span>
+                </button>
+              </div>
             </div>
           </div>
           <div class="col-md-6 pl-md-0">
-            <div class="card text-center bg-aid text-primary border-0 mt-7 mt-md-0 h-100">
+            <div
+              class="card text-center bg-aid text-primary border-0 mt-7 mt-md-0 h-100"
+            >
               <div class="card-body py-6">
-                <h4 class="card-title mb-4 "><strong class="community-link">社群連結</strong></h4>
+                <h4 class="card-title mb-4">
+                  <strong class="community-link">社群連結</strong>
+                </h4>
                 <div class="card bg-transparent border-0">
-                  <a href="#" class="btn btn-light py-3 mb-3"><span class="h5">facebook</span></a>
-                  <a href="#" class="btn btn-light py-3 mb-3"><span class="h5">google</span></a>
-                  <a href="#" class="btn btn-light py-3"><span class="h5">twtter</span></a>
+                  <a href="#" class="btn btn-light py-3 mb-3"
+                    ><span class="h5">facebook</span></a
+                  >
+                  <a href="#" class="btn btn-light py-3 mb-3"
+                    ><span class="h5">google</span></a
+                  >
+                  <a href="#" class="btn btn-light py-3"
+                    ><span class="h5">twtter</span></a
+                  >
                 </div>
-              </div>    
-            </div>          
+              </div>
+            </div>
           </div>
-        </div>  
+        </div>
       </div>
     </section>
 
@@ -162,7 +171,7 @@
     </footer>
     <!-- <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
-    
+
     <script src="./javascripts/jQuery/jquery.js"></script>
     <script src="./javascripts/bootstrap/bootstrap.js"></script>
   </body>
