新增產品頁面

--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
     />
     <meta
       property="og:image"
-      content="https://timothy-hippo.github.io/driving/images/car.jpg"
+      content="https://timothy-hippo.github.io/driving/images/car.png"
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <h1 class="h3">全民駕訓班</h1>
+        <a
+          class="navbar-brand logo"
+          href="./index.html"
+          style="background-image: url(./images/logo.svg)"
+        >
+          <h1 class="h6 mb-0">全民駕訓班</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -79,7 +83,14 @@
           <div class="col-4 col-lg-3">
             <div class="bg-primary h-100 py-7 drive-item">
               <a
-                class="text-assist w-100 h4 text-decoration-none text-vertical d-flex align-items-center"
+                class="
+                  text-assist
+                  w-100
+                  h4
+                  text-decoration-none text-vertical
+                  d-flex
+                  align-items-center
+                "
                 href="#teaching"
                 >教學特點</a
               >
@@ -88,7 +99,14 @@
           <div class="col-4 col-xl-3">
             <div class="bg-primary h-100 py-7 drive-item">
               <a
-                class="text-assist w-100 h4 text-decoration-none text-vertical d-flex align-items-center"
+                class="
+                  text-assist
+                  w-100
+                  h4
+                  text-decoration-none text-vertical
+                  d-flex
+                  align-items-center
+                "
                 href="#scheduled"
                 >上課時段</a
               >
@@ -97,7 +115,14 @@
           <div class="col-4 col-xl-3">
             <div class="bg-primary h-100 py-7 drive-item">
               <a
-                class="text-assist w-100 h4 text-decoration-none text-vertical d-flex align-items-center"
+                class="
+                  text-assist
+                  w-100
+                  h4
+                  text-decoration-none text-vertical
+                  d-flex
+                  align-items-center
+                "
                 href="#notice"
                 >注意事項</a
               >
@@ -116,7 +141,14 @@
         <div class="row">
           <div class="col-md-4 mb-3 mb-md-0">
             <div
-              class="card h-100 bg-transparent border-primary py-3 py-md-5 box-shadow"
+              class="
+                card
+                h-100
+                bg-transparent
+                border-primary
+                py-3 py-md-5
+                box-shadow
+              "
             >
               <div class="card-body">
                 <h4 class="card-title text-center">
@@ -132,7 +164,14 @@
           </div>
           <div class="col-md-4 mb-3 mb-md-0">
             <div
-              class="card h-100 bg-transparent border-primary py-3 py-md-5 box-shadow"
+              class="
+                card
+                h-100
+                bg-transparent
+                border-primary
+                py-3 py-md-5
+                box-shadow
+              "
             >
               <div class="card-body">
                 <h4 class="card-title text-center">
@@ -146,7 +185,14 @@
           </div>
           <div class="col-md-4 mb-3 mb-md-0">
             <div
-              class="card h-100 bg-transparent border-primary py-3 py-md-5 box-shadow"
+              class="
+                card
+                h-100
+                bg-transparent
+                border-primary
+                py-3 py-md-5
+                box-shadow
+              "
             >
               <div class="card-body">
                 <h4 class="card-title text-center">
@@ -166,7 +212,14 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-6 scheduled-img bg-cover my-lg-104 mb-5 mb-lg-0 mx-3 mx-lg-0"
+            class="
+              col-lg-6
+              scheduled-img
+              bg-cover
+              my-lg-104
+              mb-5 mb-lg-0
+              mx-3 mx-lg-0
+            "
             style="background-image: url(./images/car.jpg)"
           ></div>
           <div class="col-lg-6 py-lg-5">
@@ -175,12 +228,20 @@
               <li class="list-group-item bg-transparent">
                 <div class="row">
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     06:00-06:50
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     06:50-07:40
                   </div>
@@ -189,57 +250,101 @@
               <li class="list-group-item bg-transparent">
                 <div class="row">
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     07:40-08:30
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     08:30-09:20
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     09:20-10:10
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     10:10-11:00
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     11:00-11:50
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     11:50-12:40
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     12:40-13:30
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     13:30-14:20
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     14:20-15:10
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     15:10-16:00
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     16:00-16:50
                   </div>
@@ -248,22 +353,38 @@
               <li class="list-group-item bg-transparent">
                 <div class="row">
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     16:50-17:40
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     17:40-18:30
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     18:30-19:20
                   </div>
                   <div
-                    class="col-6 col-md-4 col-lg-6 col-xl-4 text-center px-2 px-md-3"
+                    class="
+                      col-6 col-md-4 col-lg-6 col-xl-4
+                      text-center
+                      px-2 px-md-3
+                    "
                   >
                     19:20-20:10
                   </div>
@@ -297,8 +418,15 @@
             </ul>
           </div>
           <div
-            class="col-lg-6 scheduled-img bg-cover my-lg-104 mb-5 mb-lg-0 mx-3 mx-lg-0"
-            style="background-image: url(./images/car.jpg)"
+            class="
+              col-lg-6
+              scheduled-img
+              bg-cover
+              my-lg-104
+              mb-5 mb-lg-0
+              mx-3 mx-lg-0
+            "
+            style="background-image: url(./images/green.jpg)"
           ></div>
         </div>
       </div>
@@ -379,9 +507,6 @@
         © Copyright 2021 全民駕訓班
       </div>
     </footer>
-    <!-- <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
-
     <script src="./javascripts/jQuery/jquery.js"></script>
     <script src="./javascripts/bootstrap/bootstrap.js"></script>
   </body>
