--- a/login.html
+++ b/login.html
@@ -12,20 +12,30 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://timothy-hippo.github.io/driving/index.html"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="全民汽車駕駛人訓練班" />
     <meta
       property="og:description"
       content="全民駕訓班，原地原車現場考照，一人一台車，增設假日班"
     />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://timothy-hippo.github.io/driving/images/car.png"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <h1 class="h3">全民駕訓班</h1>
+        <a
+          class="navbar-brand logo"
+          href="./index.html"
+          style="background-image: url(./images/logo.svg)"
+        >
+          <h1 class="h6 mb-0">全民駕訓班</h1>
         </a>
         <button
           class="navbar-toggler"
