修改首頁圖片

--- a/index.html
+++ b/index.html
@@ -399,6 +399,18 @@
     <section id="notice" class="text-aid bg-primary mb-9 py-5 py-lg-0">
       <div class="container">
         <div class="row">
+          <div
+            class="
+              col-lg-6
+              scheduled-img
+              bg-cover
+              my-lg-104
+              mb-5 mb-lg-0
+              mx-3 mx-lg-0
+              d-block d-lg-none
+            "
+            style="background-image: url(./images/green.jpg)"
+          ></div>
           <div class="col-lg-6 py-lg-5">
             <p class="h3 text-center"><strong>報名注意事項</strong></p>
             <ul class="list-group list-group-flush h4 scheduled">
@@ -425,6 +437,7 @@
               my-lg-104
               mb-5 mb-lg-0
               mx-3 mx-lg-0
+              d-none d-lg-block
             "
             style="background-image: url(./images/green.jpg)"
           ></div>
