調整連絡電話欄位

--- a/carts.html
+++ b/carts.html
@@ -167,12 +167,20 @@
           <div class="col-md-6 py-5 py-md-8">
             <h2 class="h2 mb-5"><strong>全民汽車駕訓班</strong></h2>
             <ul class="list-unstyled h5">
-              <li class="mb-5">
-                報名專線：<a class="text-white" href="tel:+886-5-66366266"
-                  >(05)6366-266</a
-                >、<a class="text-white" href="tel:+886-5-66366366"
-                  >(05)6366-366</a
-                >
+              <li class="mb-5 d-flex">
+                報名專線：
+                <ul class="list-unstyled">
+                  <li>
+                    <a class="text-white" href="tel:+886-5-66366266"
+                      >(05)6366-266</a
+                    >
+                  </li>
+                  <li>
+                    <a class="text-white" href="tel:+886-5-66366366"
+                      >(05)6366-366</a
+                    >
+                  </li>
+                </ul>
               </li>
               <li class="mb-5">
                 地址：<a
