--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
       </div>
     </section>
     <!-- 時段表 -->
-    <section id="scheduled" class="text-aid bg-primary mb-9 py-5 py-lg-0">
+    <section
+      id="scheduled"
+      class="text-aid bg-primary mb-7 mb-lg-9 py-5 py-lg-0"
+    >
       <div class="container">
         <div class="row">
           <div
@@ -396,7 +399,7 @@
       </div>
     </section>
     <!-- 注意事項 -->
-    <section id="notice" class="text-aid bg-primary mb-9 py-5 py-lg-0">
+    <section id="notice" class="text-aid bg-primary mb-7 mb-lg-9 py-5 py-lg-0">
       <div class="container">
         <div class="row">
           <div
@@ -444,6 +447,65 @@
         </div>
       </div>
     </section>
+
+    <section class="mb-7 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="card box-shadow border-0 h5 h-100 position-relative">
+              <div class="special bg-primary text-assist h6 p-1">本日精選</div>
+              <img src="./images/line.jpg" class="card-img-top" alt="..." />
+              <div class="card-body d-flex p-0 border border-aid">
+                <div class="border-right w-50 text-center py-4">7秒直線</div>
+                <div class="w-50 text-center py-4">
+                  <strong>NT $180</strong>
+                </div>
+              </div>
+              <div class="card-footer border-top-0 bg-white p-0">
+                <botton class="btn btn-aid text-primary w-100 py-3">
+                  <span class="h5">加入購物車</span>
+                </botton>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card box-shadow border-0 h5 h-100 position-relative">
+              <div class="special bg-primary text-assist h6 p-1">本日精選</div>
+              <img src="./images/green.jpg" class="card-img-top" alt="..." />
+              <div class="card-body d-flex p-0 border border-aid">
+                <div class="border-right w-50 text-center py-4">拐杖糖果</div>
+                <div class="w-50 text-center py-4">
+                  <strong>NT $560</strong>
+                </div>
+              </div>
+              <div class="card-footer border-top-0 bg-white p-0">
+                <botton class="btn btn-aid text-primary w-100 py-3">
+                  <span class="h5">加入購物車</span>
+                </botton>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card box-shadow border-0 h5 h-100 position-relative">
+              <div class="special bg-primary text-assist h6 p-1">本日精選</div>
+              <img src="./images/void.jpg" class="card-img-top" alt="..." />
+              <div class="card-body d-flex p-0 border border-aid">
+                <div class="border-right w-50 text-center py-4">柏油薄荷糖</div>
+                <div class="w-50 text-center py-4">
+                  <strong>NT $1080</strong>
+                </div>
+              </div>
+              <div class="card-footer border-top-0 bg-white p-0">
+                <botton class="btn btn-aid text-primary w-100 py-3">
+                  <span class="h5">加入購物車</span>
+                </botton>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- 訂閱郵件 -->
     <section class="bg-aid text-primary py-5">
       <div class="container">
@@ -472,6 +534,7 @@
         </div>
       </div>
     </section>
+
     <!-- 聯絡我們 -->
     <footer id="footer" class="bg-primary text-white">
       <div class="container">
