--- a/products.html
+++ b/products.html
@@ -136,7 +136,19 @@
               >
                 <div class="row">
                   <div class="col-md-6 mb-3">
-                    <div class="card border-0 h5 h-100">
+                    <div
+                      class="
+                        card
+                        box-shadow
+                        border-0
+                        h5
+                        h-100
+                        position-relative
+                      "
+                    >
+                      <div class="special bg-primary text-assist h6 p-1">
+                        本日精選
+                      </div>
                       <img
                         src="./images/car.jpg"
                         class="card-img-top"
@@ -158,7 +170,19 @@
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <div class="card border-0 h5 h-100">
+                    <div
+                      class="
+                        card
+                        box-shadow
+                        border-0
+                        h5
+                        h-100
+                        position-relative
+                      "
+                    >
+                      <div class="special bg-primary text-assist h6 p-1">
+                        本日精選
+                      </div>
                       <img
                         src="./images/line.jpg"
                         class="card-img-top"
@@ -180,7 +204,19 @@
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <div class="card border-0 h5 h-100">
+                    <div
+                      class="
+                        card
+                        box-shadow
+                        border-0
+                        h5
+                        h-100
+                        position-relative
+                      "
+                    >
+                      <div class="special bg-primary text-assist h6 p-1">
+                        本日精選
+                      </div>
                       <img
                         src="./images/green.jpg"
                         class="card-img-top"
@@ -202,7 +238,19 @@
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <div class="card border-0 h5 h-100">
+                    <div
+                      class="
+                        card
+                        box-shadow
+                        border-0
+                        h5
+                        h-100
+                        position-relative
+                      "
+                    >
+                      <div class="special bg-primary text-assist h6 p-1">
+                        本日精選
+                      </div>
                       <img
                         src="./images/void.jpg"
                         class="card-img-top"
@@ -354,6 +402,23 @@
                 </div>
               </div>
             </div>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination justify-content-center mt-5">
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
