--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
+      <div class="container">  
         <a
           class="navbar-brand logo"
           href="./index.html"
           style="background-image: url(./images/logo.svg)"
         >
           <h1 class="h6 mb-0">全民駕訓班</h1>
-        </a>
+        </a>      
         <button
-          class="navbar-toggler"
+          class="navbar-toggler border-0"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
@@ -448,7 +448,7 @@
       </div>
     </section>
 
-    <section class="mb-7 ">
+    <section class="mb-7">
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-3">
