--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
           <h1 class="h6 mb-0">全民駕訓班</h1>
         </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler border-0"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
