--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">  
         <a
           class="navbar-brand logo"
