--- a/products.html
+++ b/products.html
@@ -93,35 +93,35 @@
                 data-toggle="list"
                 href="#pane-1"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>所有甜點(20)</a
+                ><i class="fas fa-angle-right mr-2"></i>所有甜點<span class="h6">(20)</span></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-2"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>方向盤(6)</a
+                ><i class="fas fa-angle-right mr-2"></i>方向盤<span class="h6">(6)</span></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-3"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>雨刷(8)</a
+                ><i class="fas fa-angle-right mr-2"></i>雨刷<span class="h6">(8)</span></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-4"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>輪胎(2)</a
+                ><i class="fas fa-angle-right mr-2"></i>輪胎<span class="h6">(2)</span></a
               >
               <a
                 class="list-group-item list-group-item-action"
                 data-toggle="list"
                 href="#pane-5"
                 role="tab"
-                ><i class="fas fa-angle-right mr-2"></i>保險桿(4)</a
+                ><i class="fas fa-angle-right mr-2"></i>保險桿<span class="h6">(4)</span></a
               >
             </div>
           </div>
